--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
         "@radix-ui/themes": "^2.0.1",
         "@tanstack/react-query": "^5.8.4",
         "dayjs": "^1.11.10",
+        "memory-cache": "^0.2.0",
         "next": "14.0.3",
         "react": "^18",
-        "react-dom": "^18"
+        "react-dom": "^18",
+        "react-icons": "^4.12.0"
     },
     "devDependencies": {
         "@types/node": "^20",
