--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "build": "next build",
         "start": "next start",
         "lint": "next lint",
-        "format": "prettier --write ."
+        "format": "prettier --write .",
+        "build:tailwind": "npx tailwindcss -o build.css --minify"
     },
     "dependencies": {
         "@radix-ui/themes": "^2.0.1",
@@ -27,6 +28,7 @@
         "eslint": "^8",
         "eslint-config-next": "14.0.3",
         "postcss": "^8",
+        "postcss-import": "^15.1.0",
         "prettier": "^3.1.0",
         "tailwindcss": "^3.3.0",
         "typescript": "^5.2.2"
