--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dependencies": {
         "@radix-ui/themes": "^2.0.1",
         "@tanstack/react-query": "^5.8.4",
+        "@vercel/analytics": "^1.1.1",
         "dayjs": "^1.11.10",
         "intersection-observer": "^0.12.2",
         "memory-cache": "^0.2.0",
