--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "start": "next start",
         "lint": "next lint",
         "format": "prettier --write .",
-        "build:tailwind": "npx tailwindcss -o build.css --minify"
+        "build:tailwind": "npx tailwindcss -o build.css --minify",
+        "prepare": "husky install"
     },
     "dependencies": {
         "@radix-ui/themes": "^2.0.1",
@@ -30,6 +31,7 @@
         "autoprefixer": "^10.0.1",
         "eslint": "^8",
         "eslint-config-next": "14.0.3",
+        "husky": "^8.0.3",
         "postcss": "^8",
         "postcss-import": "^15.1.0",
         "prettier": "^3.1.0",
