--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
         "react": "^18",
         "react-dom": "^18",
         "react-icons": "^4.12.0",
-        "react-intersection-observer": "^9.5.3"
+        "react-intersection-observer": "^9.5.3",
+        "zustand": "^4.4.7"
     },
     "devDependencies": {
         "@types/node": "^20",
